129 - fix spacing issues

--- a/source/03-components/card/_card.scss
+++ b/source/03-components/card/_card.scss
@@ -87,6 +87,10 @@ $card-padding: 30px;
   font-size: rem(gesso-font-size(2));
   line-height: gesso-line-height(loose);
 
+  p {
+    margin-bottom: 0;
+  }
+
   &:not(:last-child) {
     padding-bottom: rem(30px);
   }
